<resources>
    <string name="app_name">SomaWay</string>
    <string name="back_button_desc">\n</string>
    <string name="leaf_icon_desc">\n</string>
    <string name="lock_icon_desc">\n</string>
    <string name="toggle_password_desc" />
    <string name="person_icon_desc" />
    <string name="apple_login_desc" />
    <string name="google_login_desc" />
    <string name="facebook_login_desc" />
    <string name="checkmark_icon_desc" />
    <string name="email_icon_desc" />
    <string name="ai_avatar" />
    <string name="wave_desc">\n</string>
</resources>